# EasyAgent

./: .gitignore  LICENSE  README.md  pyproject.toml  run_web.py  setup.py
basic/: agent.py
docs/: ARCHITECTURE.md
easy-agent/core/: base.py
easy_agent/core/: __init__.py
easy_agent/messages/: text.py
easyagent/: README.md  __init__.py
easyagent.egg-info/: PKG-INFO  SOURCES.txt
easyagent/messages/: __init__.py  image.py  text.py
easyagent/models/: openai.py
easyagent/tests/: test1.py
easyagent/webui/: routes.py
easyagent/webui/templates/: dashboard.html
easyagent/webui/utils/: monitor.py
tests/: message_test.py  test1.py
tests/message_tests/: message_test.ipynb
